--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
 
 <h1>Dogs</h1>
 <p>Labrador</p>
-<img src="labradore.jpg">
- http://cdn2-www.dogtime.com/assets/uploads/gallery/labrador-retriever-dog-breed-pictures/labrador-retriever-dog-pictures-3.jpg
+
+<img src=" http://cdn2-www.dogtime.com/assets/uploads/gallery/labrador-retriever-dog-breed-pictures/labrador-retriever-dog-pictures-3.jpg
+" alt="Messi" style= "width:200px; hieght:300px">
 <ul>
 <li> They come in 3 different colors black, choclate, yellow</li>
 <li> They are easy to train</li>
