--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <p>Labrador</p>
 
 <img src=" http://cdn2-www.dogtime.com/assets/uploads/gallery/labrador-retriever-dog-breed-pictures/labrador-retriever-dog-pictures-3.jpg
-" alt="Messi" style= "width:200px; hieght:300px">
+" alt="dog" style= "width:200px; hieght:300px">
 <ul>
 <li> They come in 3 different colors black, choclate, yellow</li>
 <li> They are easy to train</li>
@@ -18,7 +18,8 @@
 </ul>
 <br>
 <p>German Shepard</p>
-<img src="german.jpg">
+ <img src=" http://cdn2-www.dogtime.com/assets/uploads/gallery/german-shepherd-dog-breed-pictures/standing-7.jpg
+" alt="dog" style= "width:200px; hieght:300px">
 <ul>
 <li> They are very smart</li>
 <li> They are commonly used as police dogs</li>
@@ -27,6 +28,8 @@
 <ul>
 <br>
 <p>Poodle</p>
+ <img src="http://cdn1-www.dogtime.com/assets/uploads/gallery/poodle-dog-breed-pictures/greaycoat-5.jpg
+" alt="dog" style= "width:200px; hieght:300px">
 <ul>
 <li> They are hypoallergenic</li>
 <li> They come in 3 different types standard, miniature and toy</li>
