--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <li> They come in 3 different colors black, choclate, yellow</li>
 <li> They are easy to train</li>
 <li> They are the most popular breed in america</li>
-<li> They are the most commmon used for guide dogs<li>
+<li> They are the most commmon used for guide dogs</li>
 </ul>
 <br>
 <p>German Shepard</p>
