--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <h1>Dogs</h1>
 <p>Labrador</p>
+ <a href="http://dogtime.com/puppies/255-puppies#/slide/1"> check out this link of puppies</a>
 
 <img src=" http://cdn2-www.dogtime.com/assets/uploads/gallery/labrador-retriever-dog-breed-pictures/labrador-retriever-dog-pictures-3.jpg
 " alt="dog" style= "width:200px; hieght:300px">
